<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCalculadora">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="0">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/peticionInicial"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal">

            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Temperatura"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:hint="@string/textTemperatura"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_analytics_black_24dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textoPuroTemperatura"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Precipitacion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/textPrecipitacion"
                app:startIconDrawable="@drawable/ic_analytics_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textoPuroPrecipitacion"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/textButtonIniciarAlgoritmo"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorBotonEsperandoDatos"
                    android:text="@string/botonEnEspera">

                </Button>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:text="Modificar Parámetros" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Compositores"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/textCompositores"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textoPuroCompositores"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Repeticiones"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/textRepeticiones"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textoPuroRepeticiones"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"

                    android:text="20" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:weightSum="1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Memoria"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/textMemoria"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textoPuroMemoria"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"

                    android:text="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Pruebas"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/textPruebas"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textoPuroPruebas"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"

                    android:text="30" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:weightSum="1">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Evaluaciones"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/textEvaluaciones"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textoPuroEvaluaciones"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"

                    android:text="5000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_IFG"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/textIFG"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textoPuroIFG"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="0.1" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:weightSum="1">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_CFG"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/textCFG"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textoPuroCFG"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"

                    android:text="0.1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_FCLA"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/textFCLA"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textoPuroFCLA"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="0.1" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/ventanaFlotante"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <TableLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="280dp"
            android:background="#DDDEE2D9"
            android:paddingBottom="10dp"
            android:text="Test"
            android:textSize="40dp">

            <TableRow android:gravity="center">

                <TextView
                    android:text="Ejecutando Algoritmo"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow android:gravity="center">

                <EditText
                    android:id="@+id/textoProgreso"
                    android:layout_width="272dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:ems="20"
                    android:inputType="textPersonName"
                    android:text="Porcentaje: 0% | Tiempo: NA"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:padding="0dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="2"
                    android:minHeight="60dp" />
            </TableRow>

            <TableRow android:layout_weight="1">
                <Button
                    android:id="@+id/textButtonCancelar"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorBotonDetener"
                    android:text="@string/botonCancelar">

                </Button>
            </TableRow>

        </TableLayout>
    </RelativeLayout>

</FrameLayout>